--- a/API_Project/API_Project.vcxproj.filters
+++ b/API_Project/API_Project.vcxproj.filters
@@ -54,6 +54,9 @@
     <Filter Include="Component\Render">
       <UniqueIdentifier>{e91979ba-dd58-4fc8-9062-32d6a6720090}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Camera">
+      <UniqueIdentifier>{2d364c8a-ecab-498b-8079-ea0bf488da16}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -109,6 +112,9 @@
     </ClCompile>
     <ClCompile Include="GameObject.cpp">
       <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Camera</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -171,6 +177,9 @@
     </ClInclude>
     <ClInclude Include="Timer.h">
       <Filter>MainFrame</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Camera</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
