--- a/API_Project/API_Project.vcxproj
+++ b/API_Project/API_Project.vcxproj
@@ -153,6 +153,7 @@
     </ClCompile>
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rigidbody.cpp" />
+    <ClCompile Include="StageMaker.cpp" />
     <ClCompile Include="WindowFrame.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +179,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rigidbody.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="StageMaker.h" />
     <ClInclude Include="structs.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="WindowFrame.h" />
