--- a/API_Project/API_Project.vcxproj.filters
+++ b/API_Project/API_Project.vcxproj.filters
@@ -130,6 +130,9 @@
     <ClCompile Include="AttackEvent.cpp">
       <Filter>KirbyGame\Component</Filter>
     </ClCompile>
+    <ClCompile Include="StageMaker.cpp">
+      <Filter>KirbyGame\Component</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowFrame.h">
@@ -205,6 +208,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="AttackEvent.h">
+      <Filter>KirbyGame\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="StageMaker.h">
       <Filter>KirbyGame\Component</Filter>
     </ClInclude>
   </ItemGroup>
