collider 자동합치기 기능 완성, 싱글톤 component 디버그 윈도우 작업, UI버튼 샘플 작업, 마우스 이벤트 작업

--- a/API_Project/API_Project.vcxproj.filters
+++ b/API_Project/API_Project.vcxproj.filters
@@ -133,6 +133,12 @@
     <ClCompile Include="StageMaker.cpp">
       <Filter>KirbyGame\Component</Filter>
     </ClCompile>
+    <ClCompile Include="DebugWindow.cpp">
+      <Filter>EngineFramework\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="RestartBtn.cpp">
+      <Filter>KirbyGame\Component</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowFrame.h">
@@ -211,6 +217,12 @@
       <Filter>KirbyGame\Component</Filter>
     </ClInclude>
     <ClInclude Include="StageMaker.h">
+      <Filter>KirbyGame\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugWindow.h">
+      <Filter>EngineFramework\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="RestartBtn.h">
       <Filter>KirbyGame\Component</Filter>
     </ClInclude>
   </ItemGroup>
