SceneChanger 싱글톤으로 변경, 기타 기능들 살짝 수정

--- a/API_Project/API_Project.vcxproj
+++ b/API_Project/API_Project.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="EditerScene.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="gmae.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="Mouse.cpp" />
