맵 이름으로 맵 파일을 따로따로 불러올 수 있도록 작업

--- a/API_Project/API_Project.vcxproj
+++ b/API_Project/API_Project.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="gmae.cpp" />
+    <ClCompile Include="InputString.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="Mouse.cpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="InputString.h" />
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="ObjectManager.h" />
