문 오브젝트 추가, 다음 맵 전환 기능 추가

--- a/API_Project/API_Project.vcxproj.filters
+++ b/API_Project/API_Project.vcxproj.filters
@@ -157,7 +157,7 @@
     <ClCompile Include="Edit.cpp">
       <Filter>KirbyGame\Component</Filter>
     </ClCompile>
-    <ClCompile Include="gmae.cpp">
+    <ClCompile Include="game.cpp">
       <Filter>global</Filter>
     </ClCompile>
     <ClCompile Include="InputString.cpp">
