--- a/API_Project/API_Project.vcxproj
+++ b/API_Project/API_Project.vcxproj
@@ -147,7 +147,7 @@
     <ClCompile Include="EditerScene.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameScene.cpp" />
-    <ClCompile Include="gmae.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="InputString.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainFrame.cpp" />
